--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,12 @@ grpcio==1.22.0
 gunicorn==19.9.0
 h5py==2.9.0
 itsdangerous==1.1.0
+Jinja2==2.10.1
 Keras==2.2.4
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
 Markdown==3.1.1
+MarkupSafe==1.1.1
 numpy==1.16.4
 opencv-python==4.1.0.25
 pandas==0.24.2
