--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ Keras-Preprocessing==1.1.0
 Markdown==3.1.1
 MarkupSafe==1.1.1
 numpy==1.16.4
+opencv-contrib-python==4.1.0.25
 opencv-python==4.1.0.25
 pandas==0.24.2
 protobuf==3.9.0
